projetos educ - sessao capa botoes e icones

--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -46,7 +46,10 @@
                 <div class="col-md-6 text-white">
                     <h1 class="fs-5">BEM VINDO AO EDUC</h1>
                     <h3 class="fw-bolder display-3">Conhecimento para vida toda</h3>
-                    <a>Saber mais</a>
+                    <a href="#" class="btn btn-outline-light">
+                        <i class="bi bi-whatsapp me-1"></i>
+                        SABER MAIS
+                    </a>
                 </div>
                 <div class="col-md-6 ">
                     <img src="assets/img/capa.png" class="img-fluid" alt="capa" width="500" height="500" >
