projetos educ - sessao capa finalizacao

--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -43,15 +43,15 @@
     <section class="capa bg-success">
         <div class="container">
             <div class="row align-items-center py-5 mt-5">
-                <div class="col-md-6 text-white">
+                <div class="col-md-6 p-5 text-white">
                     <h1 class="fs-5">BEM VINDO AO EDUC</h1>
                     <h3 class="fw-bolder display-3">Conhecimento para vida toda</h3>
-                    <a href="#" class="btn btn-outline-light">
+                    <a href="#" class="btn btn-outline-light mt-3">
                         <i class="bi bi-whatsapp me-1"></i>
                         SABER MAIS
                     </a>
                 </div>
-                <div class="col-md-6 ">
+                <div class="col-md-6 py-5">
                     <img src="assets/img/capa.png" class="img-fluid" alt="capa" width="500" height="500" >
                 </div>
             </div>
