--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -58,6 +58,17 @@
         </div>
     </section>
 
+    <section class="categorias">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3>COMECE A APRENDER HOJE</h3>
+                    <h1>Navegue em Nossas Categorias</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
