--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -59,11 +59,20 @@
     </section>
 
     <section class="categorias">
-        <div class="container">
+        <div class="container py-5">
             <div class="row">
-                <div class="col-md-12">
-                    <h3>COMECE A APRENDER HOJE</h3>
-                    <h1>Navegue em Nossas Categorias</h1>
+                <div class="col-md-12 text-center mt-5">
+                    <h3 class="fs-6">COMECE A APRENDER HOJE</h3>
+                    <h1 class="fw-bolder">Navegue em Nossas Categorias</h1>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-2 text-center p-3 mt-3">
+                    <img src="assets/img/c1.png" class="img-fluid" alt="" width="100" height="100" >
+                </div>
+                <div class="mt-2">
+                    <h3 class="fs-6">Informatica</h3>
                 </div>
             </div>
         </div>
