projetos educ - sessao categorias finalizando

--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -110,6 +110,10 @@
                         <h3 class="fs-6">Marketing</h3>
                     </div>
                 </div>
+
+                <div class="col-md-12 text-center mt-3">
+                    <a class="btn btn-success">Ver mais cursos</a>
+                </div>
             </div>
         </div>
     </section>
