--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -118,6 +118,29 @@
         </div>
     </section>
 
+    <section class="destaques">
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-md-12 text-center mt-5">
+                    <h3 class="fs-6">DESTAQUES</h3>
+                    <h1 class="fw-bolder">Principais cursos</h1>
+                </div>
+            </div>
+
+            <div class="row p-4">
+                <div class="col-md-4 ">
+
+                </div>
+                <div class="col-md-4 ">
+
+                </div>
+                <div class="col-md-4 ">
+
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
