projetos educ - sessao destaques cards

--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -118,7 +118,7 @@
         </div>
     </section>
 
-    <section class="destaques">
+    <section class="destaques bg-success bg-opacity-10">
         <div class="container py-5">
             <div class="row">
                 <div class="col-md-12 text-center mt-5">
@@ -129,7 +129,14 @@
 
             <div class="row p-4">
                 <div class="col-md-4 ">
-
+                    <div class="card p-3 mt-3" style="width: 18rem;">
+                        <img src="assets/img/ps.png" class="card-img-top" alt="" >
+                        <div class="card-body">
+                            <h5 class="card-title">Software</h5>
+                            <p class="card-text">Macetes do Photoshop</p>
+                            <a href="#" class="btn btn-primary">Acessar</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-4 ">
 
