--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -134,7 +134,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Software</h5>
                         <p class="card-text">Macetes do Photoshop</p>
-                        <a href="#" class="btn btn-success">Acessar</a>
+                        <a href="#" class="btn btn-outline-success">Acessar</a>
                     </div>
                 </div>
                 
@@ -143,7 +143,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Software</h5>
                         <p class="card-text">Macetes do Photoshop</p>
-                        <a href="#" class="btn btn-success">Acessar</a>
+                        <a href="#" class="btn btn-outline-success">Acessar</a>
                     </div>
                 </div>
                 
