--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -160,6 +160,27 @@
         </div>
     </section>
 
+    <section class="sobre">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="assets/img/sobre2.png" class="img-fluid" alt="" >
+                </div>
+
+                <div class="col-md-6">
+                    <h3 class="fs-6">APRIMORE SUAS HABILIDADES</h3>
+                    <h1 class="fw-bolder">Aprenda o que quiser</h1>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto, nam perspiciatis. Commodi, dicta vel. Sint cum recusandae officiis alias in velit necessitatibus voluptate id corporis fugit, animi voluptatum dolor earum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, quo. Nostrum deserunt blanditiis dicta, neque optio corporis cumque aut? Soluta, recusandae maxime? Ab ut blanditiis, id eligendi at excepturi consequuntur.
+                    </p>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto, nam perspiciatis. Commodi, dicta vel. Sint cum recusandae officiis alias in velit necessitatibus voluptate id corporis fugit, animi voluptatum dolor earum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, quo. Nostrum deserunt blanditiis dicta, neque optio corporis cumque aut? Soluta, recusandae maxime? Ab ut blanditiis, id eligendi at excepturi consequuntur.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
