--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -167,7 +167,7 @@
                     <img src="assets/img/sobre2.png" class="img-fluid" alt="" >
                 </div>
 
-                <div class="col-md-6">
+                <div class="col-md-6 p-5">
                     <h3 class="fs-6">APRIMORE SUAS HABILIDADES</h3>
                     <h1 class="fw-bolder">Aprenda o que quiser</h1>
                     <p>
