--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -182,6 +182,32 @@
     </section>
 
 
+    <section class="testemunho">
+        <div class="container">
+            <div class="row py-4">
+                <div class="col-md-12 text-center mt-5">
+                    <h3 class="fs-6">DESTAQUES</h3>
+                    <h1 class="fw-bolder">Principais cursos</h1>
+                </div>
+            </div>
+
+            <div class="row p-4">
+                <div class="col-md-4">
+                    <img src="assets/img/1.png" class="img-fluid" alt="" width="100" height="100" >
+                    <div class="mt-2">
+                        <h3 class="fs-3">Julia Forbes</h3>
+                        <p class="">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti sit, sequi harum repudiandae quod quas dicta est. Quos accusamus velit nesciunt dolor, dolores ex impedit, quia ullam maiores ratione voluptatem!
+                        </p>
+                        <i></i>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
