--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -192,14 +192,48 @@
             </div>
 
             <div class="row p-4">
-                <div class="col-md-4">
+                <div class="col-md-4 text-center">
                     <img src="assets/img/1.png" class="img-fluid" alt="" width="100" height="100" >
                     <div class="mt-2">
                         <h3 class="fs-3">Julia Forbes</h3>
-                        <p class="">
+                        <p class="fw-lighter">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti sit, sequi harum repudiandae quod quas dicta est. Quos accusamus velit nesciunt dolor, dolores ex impedit, quia ullam maiores ratione voluptatem!
                         </p>
-                        <i></i>
+                        <i class="bi bi-star-fill text-warning"></i>
+                        <i class="bi bi-star-fill text-warning"></i>
+                        <i class="bi bi-star-fill text-warning"></i>
+                        <i class="bi bi-star-fill text-warning"></i>
+                        <i class="bi bi-star-fill text-warning"></i>
+                    </div>
+                </div>
+
+                <div class="col-md-4 text-center">
+                    <img src="assets/img/2.png" class="img-fluid" alt="" width="100" height="100" >
+                    <div class="mt-2">
+                        <h3 class="fs-3">Julia Forbes</h3>
+                        <p class="fw-lighter">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti sit, sequi harum repudiandae quod quas dicta est. Quos accusamus velit nesciunt dolor, dolores ex impedit, quia ullam maiores ratione voluptatem!
+                        </p>
+                        <i class="bi bi-star-fill text-warning"></i>
+                        <i class="bi bi-star-fill text-warning"></i>
+                        <i class="bi bi-star-fill text-warning"></i>
+                        <i class="bi bi-star-fill text-warning"></i>
+                        <i class="bi bi-star-fill text-warning"></i>
+                    </div>
+                </div>
+
+                <div class="col-md-4 text-center">
+                    <img src="assets/img/3.png" class="img-fluid" alt="" width="100" height="100" >
+                    <div class="mt-2">
+                        <h3 class="fs-3">Julia Forbes</h3>
+                        <p class="fw-lighter">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti sit, sequi harum repudiandae quod quas dicta est. Quos accusamus velit nesciunt dolor, dolores ex impedit, quia ullam maiores ratione voluptatem!
+                        </p>
+                        <i class="bi bi-star-fill text-warning"></i>
+                        <i class="bi bi-star-fill text-warning"></i>
+                        <i class="bi bi-star-fill text-warning"></i>
+                        <i class="bi bi-star-fill text-warning"></i>
+                        <i class="bi bi-star-fill text-warning"></i>
                     </div>
                 </div>
 
