--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -242,6 +242,28 @@
         </div>
     </section>
 
+    <footer class="rodape text-white bg-success bg-opacity-75">
+        <div class="container">
+            <div class="row py-5">
+                <div class="col-md-3 mt-3">
+                    <img src="assets/img/logo2.png" >
+                </div>
+
+                <div class="col-md-3">
+                    coluna
+                </div>
+
+                <div class="col-md-3">
+                    coluna
+                </div>
+
+                <div class="col-md-3">
+                    coluna
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
