projetos educ -footer navs e guias

--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -247,10 +247,22 @@
             <div class="row py-5">
                 <div class="col-md-3 mt-3">
                     <img src="assets/img/logo2.png" >
+                    <p>Ensinando com qualidade desde 2010</p>
                 </div>
 
                 <div class="col-md-3">
-                    coluna
+                    <h3 class="fs-6 ">LINKS</h3>
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link " href="#">Carnes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " href="#">Paes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " href="#">Bebidas</a>
+                        </li>
+                    </ul>
                 </div>
 
                 <div class="col-md-3">
