projetos educ -footer formatacao

--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -250,23 +250,34 @@
                     <p>Ensinando com qualidade desde 2010</p>
                 </div>
 
-                <div class="col-md-3">
-                    <h3 class="fs-6 ">LINKS</h3>
+                <div class="col-md-3 mt-3">
+                    <h3 class="fs-6 ms-3">LINKS</h3>
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Carnes</a>
+                            <a class="nav-link text-white fw-lighter" href="#">Carnes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Paes</a>
+                            <a class="nav-link text-white fw-lighter" href="#">Paes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Bebidas</a>
+                            <a class="nav-link text-white fw-lighter" href="#">Bebidas</a>
                         </li>
                     </ul>
                 </div>
 
-                <div class="col-md-3">
-                    coluna
+                <div class="col-md-3 mt-3">
+                    <h3 class="fs-6 ms-3">LINKS</h3>
+                    <ul class="nav flex-column ">
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-lighter" href="#">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-lighter" href="#">Sobre</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-lighter" href="#">Contato</a>
+                        </li>
+                    </ul>
                 </div>
 
                 <div class="col-md-3">
