projetos educ -footer formatacao

--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -266,7 +266,7 @@
                 </div>
 
                 <div class="col-md-3 mt-3">
-                    <h3 class="fs-6 ms-3">LINKS</h3>
+                    <h3 class="fs-6 ms-3">MENU</h3>
                     <ul class="nav flex-column ">
                         <li class="nav-item">
                             <a class="nav-link text-white fw-lighter" href="#">Inicio</a>
@@ -280,8 +280,19 @@
                     </ul>
                 </div>
 
-                <div class="col-md-3">
-                    coluna
+                <div class="col-md-3 mt-3">
+                    <h3 class="fs-6 ms-3">REDES SOCIAIS</h3>
+                    <ul class="nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-lighter" href="#">LINK</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-lighter" href="#">LINK</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-lighter" href="#">LINK</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
