projetos educ -footer icones

--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -284,13 +284,19 @@
                     <h3 class="fs-6 ms-3">REDES SOCIAIS</h3>
                     <ul class="nav">
                         <li class="nav-item">
-                            <a class="nav-link text-white fw-lighter" href="#">LINK</a>
+                            <a class="nav-link fs-3 text-white" href="#">
+                                <i class="bi bi-facebook"></i>
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white fw-lighter" href="#">LINK</a>
+                            <a class="nav-link fs-3 text-white " href="#">
+                                <i class="bi bi-twitter"></i>
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white fw-lighter" href="#">LINK</a>
+                            <a class="nav-link fs-3 text-white" href="#">
+                                <i class="bi bi-instagram"></i>
+                            </a>
                         </li>
                     </ul>
                 </div>
