--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -182,7 +182,7 @@
     </section>
 
 
-    <section class="testemunho">
+    <section class="testemunho p-2">
         <div class="container">
             <div class="row py-4">
                 <div class="col-md-12 text-center mt-5">
