--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -27,10 +27,10 @@
             <div class="collpase navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item px-2">
-                        <a class="nav-link fw-bolder text-dark" aria-current="page" href="#">Inicio</a>
+                        <a class="nav-link fw-bolder text-dark" aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item px-2">
-                        <a class="nav-link fw-bolder text-dark" href="#">Sobre</a>
+                        <a class="nav-link fw-bolder text-dark" href="sobre.html">Sobre</a>
                     </li>
                     <li class="nav-item px-2">
                         <a class="nav-link fw-bolder text-dark" href="#">Contato</a>
