projetos educ - finalizando a pagina sobre

--- a/projetos-51/educ/sobre.html
+++ b/projetos-51/educ/sobre.html
@@ -27,10 +27,10 @@
             <div class="collpase navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item px-2">
-                        <a class="nav-link fw-bolder text-dark" aria-current="page" href="#">Inicio</a>
+                        <a class="nav-link fw-bolder text-dark" aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item px-2">
-                        <a class="nav-link fw-bolder text-dark" href="#">Sobre</a>
+                        <a class="nav-link fw-bolder text-dark" href="sobre.html">Sobre</a>
                     </li>
                     <li class="nav-item px-2">
                         <a class="nav-link fw-bolder text-dark" href="#">Contato</a>
@@ -39,6 +39,17 @@
             </div>
         </div>
     </nav>
+
+
+    <div class="capa bg-success">
+        <div class="container">
+            <div class="row py-5 mt-5">
+                <div class="col-md-12 text-white">
+                    <h1 class="fw-bolder display-3 text-center">Sobre</h1>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <section class="sobre">
