projetos educ - criacao da pagina contato

--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -33,7 +33,7 @@
                         <a class="nav-link fw-bolder text-dark" href="sobre.html">Sobre</a>
                     </li>
                     <li class="nav-item px-2">
-                        <a class="nav-link fw-bolder text-dark" href="#">Contato</a>
+                        <a class="nav-link fw-bolder text-dark" href="contato.html">Contato</a>
                     </li>
                 </ul>
             </div>
