projetos educ - criacao da pagina contato

--- a/projetos-51/educ/contato.html
+++ b/projetos-51/educ/contato.html
@@ -54,8 +54,21 @@
 
     <section class="contato">
         <div class="container">
-            <div class="row ">
+            <div class="row py-5">
                 
+                <div class="card col-md-12 p-5">
+                    <div class="card-body">
+
+                        <div class="col-md-6">
+                            <input type="text" class="form-control" placeholder="primeiro nome" >
+                        </div>
+
+                        <div class="col-md-6">
+                            <input type="text" class="form-control" placeholder="segundo nome" >
+                        </div>
+
+                    </div>
+                </div>
                 
             </div>
         </div>
