projetos educ - finalizacao da pagina contato

--- a/projetos-51/educ/contato.html
+++ b/projetos-51/educ/contato.html
@@ -59,13 +59,28 @@
                 <div class="card col-md-12 p-5">
                     <div class="card-body">
 
-                        <div class="col-md-6">
-                            <input type="text" class="form-control" placeholder="primeiro nome" >
-                        </div>
+                        <form class="row">
+                            <div class="col-md-6 mt-2">
+                                <input type="text" class="form-control" placeholder="nome completo" >
+                            </div>
+    
+                            <div class="col-md-6 mt-2">
+                                <input type="text" class="form-control" placeholder="email" >
+                            </div>
 
-                        <div class="col-md-6">
-                            <input type="text" class="form-control" placeholder="segundo nome" >
-                        </div>
+                            <div class="col-md-12 mt-2">
+                                <input type="text" class="form-control" placeholder="assunto" >
+                            </div>
+
+                            <div class="col-md-12 mt-2">
+                                <textarea type="text" class="form-control" rows="5" placeholder="escreva aqui" ></textarea>
+                            </div>
+
+                            <div class="col-md-12 mt-2">
+                                <button type="submit" class="btn btn-success">Enviar mensagem</button>
+                            </div>
+                        </form>
+
 
                     </div>
                 </div>
