--- a/projetos-51/beauty/index.html
+++ b/projetos-51/beauty/index.html
@@ -11,7 +11,33 @@
 
     <title>Beauty</title>
 </head>
-<body>
+<body style="background-color: #e6dad1;">
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-white opacity-75 fixed-top">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <img src='assets/img/logo.png'>
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item px-2">
+                <a class="nav-link fw-bolder text-dark" aria-current="page" href="index.html">Início</a>
+              </li>
+              <li class="nav-item px-2">
+                <a class="nav-link fw-bolder text-dark" href="sobre.html">Sobre</a>
+              </li>
+              <li class="nav-item px-2">
+                <a class="nav-link fw-bolder text-dark" href="contato.html">Contato</a>
+              </li>
+    
+            </ul>
+          </div>
+        </div>
+    </nav>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
