--- a/projetos-51/beauty/index.html
+++ b/projetos-51/beauty/index.html
@@ -64,6 +64,22 @@
           </button>
         </div>
     </section>
+
+    <section class="breve bg-white">
+        <div class="container">
+          <div class="row align-items-center py-5">
+            <div class="col-md-6 text-center p-3">
+              <h1 class="fw-bolder opacity-75">EM BREVE</h1>
+              <p>Estamos lançando nosso mais novo linha de cuidado facial ainda: Ozonia</p>
+              <a href="saiba-mais.html" class="btn btn-outline-dark">Saiba Mais</a>
+            </div>
+            <div class="col-md-6 p-3">
+              <img src="assets/img/s1.png" class="img-fluid">
+            </div>
+    
+          </div>
+        </div>
+    </section>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
