cfb-bootstrap5 - trabalhando com grids bootstrap, classes col e row

--- a/cfb-bootstrap5/aula03/index.html
+++ b/cfb-bootstrap5/aula03/index.html
@@ -7,11 +7,16 @@
     <title>cfb cursos - curso de bootstrap</title>
 </head>
 <body>
-    <div class="container-fluid border">
-        <div>
-            <div>coluna 1</div>
-            <div>coluna 2</div>
-            <div>coluna 3</div>
+    <div class="container-fluid border border-primary p-3">
+        <div class="row border">
+            <div class="col-1 border">coluna 1</div>
+            <div class="col-2 border">coluna 2</div>
+            <div class="col-3 border">coluna 3</div>
+        </div>
+        <div class="row border">
+            <div class="col border">coluna 1</div>
+            <div class="col border">coluna 2</div>
+            <div class="col border">coluna 3</div>
         </div>
     </div>
 </body>
