--- a/cfb-bootstrap5/aula03/index.html
+++ b/cfb-bootstrap5/aula03/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="container-fluid border border-primary p-3">
         <div class="row border">
-            <div class="col-1 border">coluna 1</div>
-            <div class="col-2 border">coluna 2</div>
-            <div class="col-3 border">coluna 3</div>
+            <div class="col border">coluna 1</div>
+            <div class="col-1 border">coluna 2</div>
+            <div class="col-2 border">coluna 3</div>
         </div>
         <div class="row border">
             <div class="col border">coluna 1</div>
