cfb-bootstrap5 - formatando fonte/tipografia em bootstrap #p2

--- a/cfb-bootstrap5/aula05/index.html
+++ b/cfb-bootstrap5/aula05/index.html
@@ -7,8 +7,35 @@
     <title>cfb cursos - curso de bootstrap</title>
 </head>
 <body>
-    
-    <div class="container-fluid row border border-primary p-3">
+
+    <div class="container-fluid row flex border border-primary p-3 m-3">
+        <h1>cfb <span class="small">cursos</span></h1>
+        <p class="text-center"><span class="text-uppercase">Canal</span> com cursos de programacao gratuitos e de qualidade</p>
+        <p class="text-left">com cursos de programacao gratuitos e de qualidade</p>
+        <p class="text-break">com cursos de programacao gratuitos e de qualidade</p>
+        <p class="text-end">com cursos de programacao gratuitos e de qualidade</p>
+    </div>
+
+    <div class="container-fluid row flex border border-primary p-3 m-3">
+        <div class="container-fluid col border m-1">
+            <h1>cfb <small>cursos</small></h1>
+            <h2>cfb <span class="small">cursos</span></h2>
+            <h3>cfb cursos</h3>
+            <h4>cfb cursos</h4>
+            <h5>cfb cursos</h5>
+            <h6>cfb cursos</h6>
+        </div>
+        <div class="container-fluid col border m-1">
+            <p class="h1">cfb cursos</p>
+            <p class="h2">cfb cursos</p>
+            <p class="h3">cfb cursos</p>
+            <p class="h4">cfb cursos</p>
+            <p class="h5">cfb cursos</p>
+            <p class="h6">cfb cursos</p>
+        </div>
+    </div>
+
+    <div class="container-fluid row flex border border-primary p-3 m-3">
         <div class="container-fluid col border m-1">
             <h1>cfb cursos</h1>
             <h2>cfb cursos</h2>
@@ -18,12 +45,12 @@
             <h6>cfb cursos</h6>
         </div>
         <div class="container-fluid col border m-1">
-            <h1>cfb cursos</h1>
-            <h2>cfb cursos</h2>
-            <h3>cfb cursos</h3>
-            <h4>cfb cursos</h4>
-            <h5>cfb cursos</h5>
-            <h6>cfb cursos</h6>
+            <p class="display-1">cfb cursos</p>
+            <p class="display-2">cfb cursos</p>
+            <p class="display-3">cfb cursos</p>
+            <p class="display-4">cfb cursos</p>
+            <p class="display-5">cfb cursos</p>
+            <p class="display-6">cfb cursos</p>
         </div>
     </div>
 
