--- a/cfb-bootstrap5/aula06/index.html
+++ b/cfb-bootstrap5/aula06/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <div class="container-fluid row flex border border-dark p-3 my-3">
+    <div class="container-fluid row flex border border-dark p-3 my-3 ">
         <p class="h3">muted</p>
         <p class="h3">important</p>
         <p class="h3">success</p>
@@ -18,6 +18,30 @@
         <p class="h3">secondary</p>
         <p class="h3">white</p>
         <p class="h3">dark</p>
+        <p class="h3">light</p>
+    </div>
+    <div class="container-fluid row flex border border-dark p-3 my-3">
+        <p class="h3">primary</p>
+    </div>
+    <div class="container-fluid row flex border border-dark p-3 my-3">
+        <p class="h3">success</p>
+    </div>
+    <div class="container-fluid row flex border border-dark p-3 my-3">
+        <p class="h3">info</p>
+    </div>
+    <div class="container-fluid row flex border border-dark p-3 my-3">
+        <p class="h3">warning</p>
+    </div>
+    <div class="container-fluid row flex border border-dark p-3 my-3">
+        <p class="h3">danger</p>
+    </div>
+    <div class="container-fluid row flex border border-dark p-3 my-3">
+        <p class="h3">secondary</p>
+    </div>
+    <div class="container-fluid row flex border border-dark p-3 my-3">
+        <p class="h3">dark</p>
+    </div>
+    <div class="container-fluid row flex border border-dark p-3 my-3">
         <p class="h3">light</p>
     </div>
 
