cfb-bootstrap5 - usando cores em bootstrap #p2

--- a/cfb-bootstrap5/aula06/index.html
+++ b/cfb-bootstrap5/aula06/index.html
@@ -9,39 +9,39 @@
 <body>
 
     <div class="container-fluid row flex border border-dark p-3 my-3 ">
-        <p class="h3">muted</p>
-        <p class="h3">important</p>
-        <p class="h3">success</p>
-        <p class="h3">info</p>
-        <p class="h3">warning</p>
-        <p class="h3">danger</p>
-        <p class="h3">secondary</p>
-        <p class="h3">white</p>
-        <p class="h3">dark</p>
-        <p class="h3">light</p>
+        <p class="h3 text-muted">muted</p>
+        <p class="h3 text-primary">important</p>
+        <p class="h3 text-success">success</p>
+        <p class="h3 text-info">info</p>
+        <p class="h3 text-warning">warning</p>
+        <p class="h3 text-danger">danger</p>
+        <p class="h3 text-secondary">secondary</p>
+        <p class="h3 text-white-50 bg-dark">white</p>
+        <p class="h3 text-dark">dark</p>
+        <p class="h3 text-light">light</p>
     </div>
-    <div class="container-fluid row flex border border-dark p-3 my-3">
+    <div class="container-fluid bg-primary row flex border border-dark p-3 my-3">
         <p class="h3">primary</p>
     </div>
-    <div class="container-fluid row flex border border-dark p-3 my-3">
+    <div class="container-fluid bg-success row flex border border-dark p-3 my-3">
         <p class="h3">success</p>
     </div>
-    <div class="container-fluid row flex border border-dark p-3 my-3">
+    <div class="container-fluid bg-info row flex border border-dark p-3 my-3">
         <p class="h3">info</p>
     </div>
-    <div class="container-fluid row flex border border-dark p-3 my-3">
+    <div class="container-fluid bg-warning row flex border border-dark p-3 my-3">
         <p class="h3">warning</p>
     </div>
-    <div class="container-fluid row flex border border-dark p-3 my-3">
+    <div class="container-fluid bg-danger row flex border border-dark p-3 my-3">
         <p class="h3">danger</p>
     </div>
-    <div class="container-fluid row flex border border-dark p-3 my-3">
+    <div class="container-fluid bg-secondary row flex border border-dark p-3 my-3">
         <p class="h3">secondary</p>
     </div>
-    <div class="container-fluid row flex border border-dark p-3 my-3">
-        <p class="h3">dark</p>
+    <div class="container-fluid bg-dark row flex border border-dark p-3 my-3">
+        <p class="h3 text-white">dark</p>
     </div>
-    <div class="container-fluid row flex border border-dark p-3 my-3">
+    <div class="container-fluid bg-light row flex border border-dark p-3 my-3">
         <p class="h3">light</p>
     </div>
 
