--- a/cfb-bootstrap5/aula07/index.html
+++ b/cfb-bootstrap5/aula07/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="container-fluid flex border border-dark p-3 my-3">
-        <table>
+        <table class="table table-striped table-hover table-bordered">
             <thead>
                 <tr>
                     <th>Marca</th>
