--- a/cfb-bootstrap5/aula08/index.html
+++ b/cfb-bootstrap5/aula08/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="container-fluid flex border border-dark p-3 my-3">
-        <img src="amazon-logo.png" />
+        <img src="paisagem.png" class="w-50 rounded-3" />
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
