cfb-bootstrap5 - classes para alertas no bootstrap #p2

--- a/cfb-bootstrap5/aula10/index.html
+++ b/cfb-bootstrap5/aula10/index.html
@@ -8,27 +8,33 @@
 </head>
 <body>
 
-    <div class="">
+    <div class="alert alert-success alert-dismissible fade show">
+        <button class="btn-close" data-bs-dismiss="alert"></button>
         <strong>Sucesso</strong> em uma ação
     </div>
 
-    <div class="">
+    <div class="alert alert-info alert-dismissible fade show">
+        <button class="btn-close" data-bs-dismiss="alert"></button>
         <strong>Info</strong> indica uma informação
     </div>
 
-    <div class="">
+    <div class="alert alert-warning alert-dismissible fade show">
+        <button class="btn-close" data-bs-dismiss="alert"></button>
         <strong>Warning</strong> indica um alerta
     </div>
 
-    <div class="">
+    <div class="alert alert-danger alert-dismissible fade show">
+        <button class="btn-close" data-bs-dismiss="alert"></button>
         <strong>Danger</strong> indica uma ação negativa
     </div>
 
-    <div class="">
+    <div class="alert alert-primary alert-dismissible fade show">
+        <button class="btn-close" data-bs-dismiss="alert"></button>
         <strong>Primary</strong> indica uam ação importante
     </div>
 
-    <div class="">
+    <div class="alert alert-secondary alert-dismissible fade show">
+        <button class="btn-close" data-bs-dismiss="alert"></button>
         <strong>Secondary</strong> indica uma ação não muito importante
     </div>
 
