--- a/cfb-bootstrap5/aula10/index.html
+++ b/cfb-bootstrap5/aula10/index.html
@@ -30,7 +30,7 @@
 
     <div class="alert alert-primary alert-dismissible fade show">
         <button class="btn-close" data-bs-dismiss="alert"></button>
-        <strong>Primary</strong> indica uam ação importante
+        <strong>Primary</strong> indica uma ação importante
     </div>
 
     <div class="alert alert-secondary alert-dismissible fade show">
