cfb-bootstrap5 - classes para botoes no bootstrap #p1

--- a/cfb-bootstrap5/aula11/index.html
+++ b/cfb-bootstrap5/aula11/index.html
@@ -12,7 +12,7 @@
         <div class="container-fluid col bg-white m-3 p-3">
             <button type="button">Normal</button>
             <button type="button">Primario</button>
-            <button type="button">Secundary</button>
+            <button type="button">Secundario</button>
             <button type="button">Sucesso</button>
             <button type="button">Informação</button>
         </div>
