cfb-bootstrap5 - classes para botoes no bootstrap #p2

--- a/cfb-bootstrap5/aula11/index.html
+++ b/cfb-bootstrap5/aula11/index.html
@@ -9,19 +9,42 @@
 <body>
 
     <div class="container-fluid row bg-primary">
-        <div class="container-fluid col bg-white m-3 p-3">
-            <button type="button">Normal</button>
-            <button type="button">Primario</button>
-            <button type="button">Secundario</button>
-            <button type="button">Sucesso</button>
-            <button type="button">Informação</button>
+        <div class="container-fluid  bg-white my-3 p-3">
+            <button type="button" class="btn ">Normal</button>
+            <button type="button" class="btn btn-primary">Primario</button>
+            <button type="button" class="btn btn-secondary">Secundario</button>
+            <button type="button" class="btn btn-success">Sucesso</button>
+            <button type="button" class="btn btn-info">Informação</button>
         </div>
-        <div class="container-fluid col bg-white m-3 p-3">
-            <button type="button">Alerta</button>
-            <button type="button">Perigo</button>
-            <button type="button">Dark</button>
-            <button type="button">Light</button>
-            <button type="button">Link</button>
+        <div class="container-fluid  bg-white my-3 p-3">
+            <button type="button" class="btn btn-warning">Alerta</button>
+            <button type="button" class="btn btn-danger">Perigo</button>
+            <button type="button" class="btn btn-dark">Dark</button>
+            <button type="button" class="btn btn-light">Light</button>
+            <button type="button" class="btn btn-link">Link</button>
+        </div>
+        <div class="container-fluid  bg-white my-3 p-3">
+            <button type="button" class="btn ">Normal</button>
+            <button type="button" class="btn btn-outline-primary">Primario</button>
+            <button type="button" class="btn btn-outline-secondary">Secundario</button>
+            <button type="button" class="btn btn-outline-success">Sucesso</button>
+            <button type="button" class="btn btn-outline-info">Informação</button>
+        </div>
+        <div class="container-fluid  bg-white my-3 p-3">
+            <button type="button" class="btn btn-outline-warning">Alerta</button>
+            <button type="button" class="btn btn-outline-danger">Perigo</button>
+            <button type="button" class="btn btn-outline-dark">Dark</button>
+            <button type="button" class="btn btn-outline-light">Light</button>
+        </div>
+        <div class="container-fluid  bg-white my-3 p-3">
+            <button type="button" class="btn btn-primary btn-sm">Primario</button>
+            <button type="button" class="btn btn-secondary ">Secundario</button>
+            <button type="button" class="btn btn-success btn-lg">Sucesso</button>
+        </div>
+        <div class="container-fluid  bg-white my-3 p-3">
+            <button type="button" class="btn btn-primary btn-block">Primario</button>
+            <button type="button" class="btn btn-secondary btn-block">Secundario</button>
+            <button type="button" class="btn btn-success btn-block">Sucesso</button>
         </div>
     </div>
 
