--- a/cfb-bootstrap5/aula12/index.html
+++ b/cfb-bootstrap5/aula12/index.html
@@ -6,14 +6,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <title>cfb cursos - curso de bootstrap</title>
 </head>
-<body>
+<body class="bg-primary">
 
     <div class="container-fluid bg-white my-3 p-3">
-        <button type="button" class="btn btn-primary">HTML</button>
-        <button type="button" class="btn btn-primary">CSS</button>
-        <button type="button" class="btn btn-primary">Javascript</button>
-        <button type="button" class="btn btn-primary">Bootstrap</button>
-        <button type="button" class="btn btn-primary">React</button>
+        <div class="btn-group-vertical btn-group-lg">
+            <button type="button" class="btn btn-primary">HTML</button>
+            <button type="button" class="btn btn-primary">CSS</button>
+            <button type="button" class="btn btn-primary">Javascript</button>
+            <button type="button" class="btn btn-primary">Bootstrap</button>
+            <button type="button" class="btn btn-primary">React</button>
+        </div>
+        <div class="btn-group btn-group-sm">
+            <button type="button" class="btn btn-primary">HTML</button>
+            <button type="button" class="btn btn-primary">CSS</button>
+            <div class="btn-group">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">Javascript</button>
+                <div class="dropdown-menu">
+                    <a href="#" class="dropdown-item">Variaveis</a>
+                    <a href="#" class="dropdown-item">Console</a>
+                    <a href="#" class="dropdown-item">Condicionais</a>
+                </div>
+            </div>
+            <button type="button" class="btn btn-primary">Bootstrap</button>
+            <button type="button" class="btn btn-primary">React</button>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
