--- a/cfb-bootstrap5/aula13/index.html
+++ b/cfb-bootstrap5/aula13/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
 
-    <img src="paisagem.png" class="img-thumbnail" />
-    <img src="paisagem-2.png" class="img-thumbnail" />
+    <img src="paisagem.png" class="img-thumbnail mx-auto d-block" />
+    <div class="bg-black text-center">
+        <img src="paisagem-2.png" class="img-thumbnail " />
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
