--- a/cfb-bootstrap5/aula14/index.html
+++ b/cfb-bootstrap5/aula14/index.html
@@ -9,20 +9,25 @@
 <body>
 
     <div class="container-fluid bg-white p-2">
-        <div class="row bg-primary m-2 p-2" style="height: 100px;">
+        <div class="row align-items-start bg-primary m-2 p-2" style="height: 100px;">
+            <div class="col bg-white bg-opacity-50 border">Coluna 1</div>
+            <div class="col bg-white bg-opacity-50 border">Coluna 2</div>
+            <div class="col bg-white bg-opacity-50 border">Coluna 3</div>
+        </div>
+        <div class="row align-items-center bg-primary m-2 p-2" style="height: 100px;">
+            <div class="col bg-white bg-opacity-50 border">Coluna 1</div>
+            <div class="col bg-white bg-opacity-50 border">Coluna 2</div>
+            <div class="col bg-white bg-opacity-50 border">Coluna 3</div>
+        </div>
+        <div class="row align-items-end bg-primary m-2 p-2" style="height: 100px;">
             <div class="col bg-white bg-opacity-50 border">Coluna 1</div>
             <div class="col bg-white bg-opacity-50 border">Coluna 2</div>
             <div class="col bg-white bg-opacity-50 border">Coluna 3</div>
         </div>
         <div class="row bg-primary m-2 p-2" style="height: 100px;">
-            <div class="col bg-white bg-opacity-50 border">Coluna 1</div>
-            <div class="col bg-white bg-opacity-50 border">Coluna 2</div>
-            <div class="col bg-white bg-opacity-50 border">Coluna 3</div>
-        </div>
-        <div class="row bg-primary m-2 p-2" style="height: 100px;">
-            <div class="col bg-white bg-opacity-50 border">Coluna 1</div>
-            <div class="col bg-white bg-opacity-50 border">Coluna 2</div>
-            <div class="col bg-white bg-opacity-50 border">Coluna 3</div>
+            <div class="col align-self-start bg-white bg-opacity-50 border">Coluna 1</div>
+            <div class="col align-self-center bg-white bg-opacity-50 border">Coluna 2</div>
+            <div class="col align-self-end bg-white bg-opacity-50 border">Coluna 3</div>
         </div>
     </div>
 
