--- a/cfb-bootstrap5/aula14/index.html
+++ b/cfb-bootstrap5/aula14/index.html
@@ -29,6 +29,23 @@
             <div class="col align-self-center bg-white bg-opacity-50 border">Coluna 2</div>
             <div class="col align-self-end bg-white bg-opacity-50 border">Coluna 3</div>
         </div>
+        <div class="row justify-content-start bg-primary m-2 p-2" style="height: 100px;">
+            <div class="col-3 bg-white bg-opacity-50 border">Coluna 1</div>
+            <div class="col-3 bg-white bg-opacity-50 border">Coluna 2</div>
+        </div>
+        <div class="row justify-content-center bg-primary m-2 p-2" style="height: 100px;">
+            <div class="col-3 bg-white bg-opacity-50 border">Coluna 1</div>
+            <div class="col-3 bg-white bg-opacity-50 border">Coluna 2</div>
+        </div>
+        <div class="row justify-content-end bg-primary m-2 p-2" style="height: 100px;">
+            <div class="col-3 bg-white bg-opacity-50 border">Coluna 1</div>
+            <div class="col-3 bg-white bg-opacity-50 border">Coluna 2</div>
+        </div>
+        <div class="row bg-primary m-2 p-2" style="height: 100px;">
+            <div class="col order-3 bg-white bg-opacity-50 border">Coluna 1</div>
+            <div class="col order-1 bg-white bg-opacity-50 border">Coluna 2</div>
+            <div class="col order-2 bg-white bg-opacity-50 border">Coluna 3</div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
