cfb-bootstrap5 - badges #p2

--- a/cfb-bootstrap5/aula15/index.html
+++ b/cfb-bootstrap5/aula15/index.html
@@ -9,11 +9,11 @@
 <body>
 
     <div class="container">
-        <h1>curso de Bootstrap 5 - primary badges</h1>
-        <h1>curso de Bootstrap 5 - primary badges</h1>
-        <h1>curso de Bootstrap 5 - primary badges</h1>
-        <h1>curso de Bootstrap 5 - primary badges</h1>
-        <h1>curso de Bootstrap 5 - primary badges</h1>
+        <h1>curso de Bootstrap 5 - <span class="badge bg-primary">badges</span></h1>
+        <h1>curso de Bootstrap 5 - <span class="badge bg-primary rounded-pill">badges</span></h1>
+        <button type="button" class="btn btn-primary">
+            Curso de Bootstrap aula <span class="badge bg-danger">15</span>
+        </button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
