--- a/cfb-bootstrap5/aula16/index.html
+++ b/cfb-bootstrap5/aula16/index.html
@@ -8,10 +8,34 @@
 </head>
 <body>
 
-    <div class="progress">
-        <div class="progress-bar" style="width: 50%;"></div>
+
+    <div class="container">
+        <div class="progress" style="height: 30px;">
+            <div id="pb1" class="progress-bar bg-success progress-bar-striped progress-bar-animated" style="width: 50%;"></div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="progress" style="height: 30px;">
+            <div  class="progress-bar bg-primary progress-bar-striped progress-bar-animated" style="width: 50%;"></div>
+            <div  class="progress-bar bg-success progress-bar-striped progress-bar-animated" style="width: 20%;"></div>
+            <div  class="progress-bar bg-danger progress-bar-striped progress-bar-animated" style="width: 5%;"></div>
+            <div  class="progress-bar bg-warning progress-bar-striped progress-bar-animated" style="width: 15%;"></div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <script>
+        let barra = document.getElementById("pb1");
+        let carga = 0
+        let intBarra = setInterval(() => {
+            barra.innerHTML = carga+"%"
+            barra.style.width = carga+"%"
+            carga++
+            if(carga>= 100) {
+                carga=0;
+            }
+        }, 250)
+    </script>
 </body>
 </html>
