--- a/cfb-bootstrap5/aula18/index.html
+++ b/cfb-bootstrap5/aula18/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
 
-    <ul>
-        <li>Antetior</li>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>Próxima</li>
+    <ul class="pagination">
+        <li class="page-item"><a class="page-link" href="#">Antetior</a></li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a>></li>
+        <li class="page-item"><a class="page-link" href="#">4</a>></li>
+        <li class="page-item"><a class="page-link" href="#">Próxima</a></li>
     </ul>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
