--- a/cfb-bootstrap5/aula18/index.html
+++ b/cfb-bootstrap5/aula18/index.html
@@ -12,8 +12,8 @@
         <li class="page-item"><a class="page-link" href="#">Antetior</a></li>
         <li class="page-item"><a class="page-link" href="#">1</a></li>
         <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a>></li>
-        <li class="page-item"><a class="page-link" href="#">4</a>></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item"><a class="page-link" href="#">4</a></li>
         <li class="page-item"><a class="page-link" href="#">Próxima</a></li>
     </ul>
 
