--- a/cfb-bootstrap5/aula18/index.html
+++ b/cfb-bootstrap5/aula18/index.html
@@ -16,7 +16,33 @@
         <li class="page-item"><a class="page-link" href="#">4</a></li>
         <li class="page-item"><a class="page-link" href="#">Próxima</a></li>
     </ul>
+    <ul class="pagination">
+        <li class="page-item active"><a class="page-link" href="#">Antetior</a></li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item"><a class="page-link" href="#">4</a></li>
+        <li class="page-item disabled"><a class="page-link" href="#">Próxima</a></li>
+    </ul>
+    <ul class="pagination">
+        <li class="page-item" onclick="ativar(this)"><a class="page-link" href="#">Antetior</a></li>
+        <li class="page-item active" onclick="ativar(this)"><a class="page-link" href="#">1</a></li>
+        <li class="page-item" onclick="ativar(this)"><a class="page-link" href="#">2</a></li>
+        <li class="page-item" onclick="ativar(this)"><a class="page-link" href="#">3</a></li>
+        <li class="page-item" onclick="ativar(this)"><a class="page-link" href="#">4</a></li>
+        <li class="page-item" onclick="ativar(this)"><a class="page-link" href="#">Próxima</a></li>
+    </ul>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <script>
+        const ativar = (elemento) => {
+            let itens = document.getElementsByClassName("page-item");
+            for(i = 0;i < itens.length;i++) {
+                itens[i].classList.remove("active");
+            }
+            elemento.classList.add("active")
+        }
+    </script>
 </body>
 </html>
