cfb-bootstrap5 - listgroups em bootstrap #p2

--- a/cfb-bootstrap5/aula19/index.html
+++ b/cfb-bootstrap5/aula19/index.html
@@ -8,16 +8,17 @@
 </head>
 <body>
 
-    <ul class="">
-        <li class="">Curso de Bootstrap</li>
-        <li class="">Curso de Javascript</li>
-        <li class="">Curso de c++</li>
+    <ul class="list-group">
+        <li class="list-group-item list-group-item-action list-group-item-primary d-flex justify-content-between">Curso de Bootstrap<span class="badge bg-primary rounded-pill">19</span></li>
+        <li class="list-group-item list-group-item-action list-group-item-primary d-flex justify-content-between">Curso de Javascript<span class="badge bg-secondary rounded-pill">190</span></li>
+        <li class="list-group-item list-group-item-action list-group-item-success d-flex justify-content-between">Curso de c++<span class="badge bg-success rounded-pill">100</span></li>
     </ul>
 
-    <div class="">
-        <a href="#" class="">Curso de Bootstrap</a>
-        <a href="#" class="">Curso de Javascript</a>
-        <a href="#" class="">Curso de c++</a>
+    <br/>
+    <div class="list-group">
+        <a href="#" class="list-group-item list-group-item-action">Curso de Bootstrap</a>
+        <a href="#" class="list-group-item list-group-item-action">Curso de Javascript</a>
+        <a href="#" class="list-group-item list-group-item-action">Curso de c++</a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
