cfb-bootstrap5 - listgroups em bootstrap #p2

--- a/cfb-bootstrap5/aula19/index.html
+++ b/cfb-bootstrap5/aula19/index.html
@@ -9,9 +9,15 @@
 <body>
 
     <ul class="list-group">
-        <li class="list-group-item list-group-item-action list-group-item-primary d-flex justify-content-between">Curso de Bootstrap<span class="badge bg-primary rounded-pill">19</span></li>
-        <li class="list-group-item list-group-item-action list-group-item-primary d-flex justify-content-between">Curso de Javascript<span class="badge bg-secondary rounded-pill">190</span></li>
-        <li class="list-group-item list-group-item-action list-group-item-success d-flex justify-content-between">Curso de c++<span class="badge bg-success rounded-pill">100</span></li>
+        <li class="list-group-item list-group-item-action list-group-item-primary d-flex justify-content-between">
+            Curso de Bootstrap<span class="badge bg-primary rounded-pill">19</span>
+        </li>
+        <li class="list-group-item list-group-item-action list-group-item-primary d-flex justify-content-between">
+            Curso de Javascript<span class="badge bg-secondary rounded-pill">190</span>
+        </li>
+        <li class="list-group-item list-group-item-action list-group-item-success d-flex justify-content-between">
+            Curso de c++<span class="badge bg-success rounded-pill">100</span>
+        </li>
     </ul>
 
     <br/>
