cfb-bootstrap5 - cards em bootstrap #p2

--- a/cfb-bootstrap5/aula20/index.html
+++ b/cfb-bootstrap5/aula20/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +8,14 @@
 </head>
 <body>
 
-    <div class="card">
+    <div class="card" style="width: 250px;">
         <div class="card-header">
             <h1 class="card-title">cfb cursos</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus tempore, corrupti ducimus facilis omnis, hic enim reiciendis doloremque, iusto suscipit distinctio non et eius similique voluptates quae mollitia possimus blanditiis!
+            </p>
         </div>
+        <img class="card-img" src="paisagem.png" />
         <div class="card-body">
             <p class="card-text">canal com cursos de programacao</p>
             <a href="http://youtube.com/cfbcursos" target="_blank" class="btn btn-primary">Acessar curso</a>
