--- a/cfb-bootstrap5/aula23/index.html
+++ b/cfb-bootstrap5/aula23/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 
-    <ul class="nav">
+    <ul class="nav nav-tabs ">
         <li class="nav-item">
             <a href="#" class="nav-link">Bootstrap</a>
         </li>
         <li>
-            <a href="#" class="nav-link">CSS</a>
+            <a href="#" class="nav-link active">CSS</a>
         </li>
         <li>
             <a href="#" class="nav-link">Javascript</a>
