cfb-bootstrap5 - nav com dropdown em bootstrap #p2

--- a/cfb-bootstrap5/aula24/index.html
+++ b/cfb-bootstrap5/aula24/index.html
@@ -8,12 +8,20 @@
 </head>
 <body>
 
-    <ul class="nav nav-tabs">
+    <ul class="nav nav-pills nav-justified">
         <li class="nav-item">
             <a href="#" class="nav-link">Bootstrap</a>
         </li>
-        <li>
-            <a href="#" class="nav-link active">CSS</a>
+        <li class="nav-item dropdown">
+            <a href="#" class="active nav-link dropdown-toggle" data-bs-toggle="dropdown">CSS</a>
+            <ul class="dropdown-menu">
+                <li>
+                    <a href="#" class="dropdown-item">aula 1</a>
+                    <a href="#" class="dropdown-item">aula 2</a>
+                    <a href="#" class="dropdown-item">aula 3</a>
+                    <a href="#" class="dropdown-item">aula 4</a>
+                </li>
+            </ul>
         </li>
         <li>
             <a href="#" class="nav-link">Javascript</a>
