cfb-bootstrap5 - navegacao dinamica em bootstrap #p2

--- a/cfb-bootstrap5/aula25/index.html
+++ b/cfb-bootstrap5/aula25/index.html
@@ -10,15 +10,21 @@
 
     <ul class="nav nav-tabs nav-justified">
         <li class="nav-item">
-            <a href="#" class="nav-link">Bootstrap</a>
+            <a href="#cursoBootstrap" data-bs-toggle="tab" class="nav-link">Bootstrap</a>
         </li>
         <li class="nav-item dropdown">
-            <a href="#" class="nav-link" >CSS</a>
+            <a href="#cursoCss" data-bs-toggle="tab" class="nav-link" >CSS</a>
         </li>
         <li>
-            <a href="#" class="nav-link">Javascript</a>
+            <a href="#cursoJavascript" data-bs-toggle="tab" class="nav-link">Javascript</a>
         </li>
     </ul>
+
+    <div class="tab-content">
+        <div id="cursoBootstrap" class="tab-pane container bg-primary p-3">Curso de Bootstrap</div>
+        <div id="cursoCss" class="tab-pane container bg-success p-3">Curso de Css</div>
+        <div id="cursoJavascript" class="tab-pane container bg-danger p-3">Curso de Javascript</div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
