--- a/cfb-bootstrap5/aula26/index.html
+++ b/cfb-bootstrap5/aula26/index.html
@@ -8,18 +8,20 @@
 </head>
 <body>
 
-    <nav>
-        <div>
-            <ul>
-                <img src="" style="width: 50px;" />
-                <li>
-                    <a>Arduino</a>
+    <nav class="navbar navbar-expand bg-dark navbar-dark">
+        <div class="container-fluid">
+            <ul class="navbar-nav">
+                <a class="navbar-brand" href="#">
+                    <img  src="paisagem.png" style="width: 50px;" />
+                </a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Arduino</a>
                 </li>
-                <li>
-                    <a>Bootstrap</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Bootstrap</a>
                 </li>
-                <li>
-                    <a>React native</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">React native</a>
                 </li>
             </ul>
         </div>
