--- a/cfb-bootstrap5/aula27/index.html
+++ b/cfb-bootstrap5/aula27/index.html
@@ -8,23 +8,32 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand bg-dark navbar-dark">
+    <nav class="navbar bg-dark navbar-dark">
         <div class="container-fluid">
-            <ul class="navbar-nav">
-                <a class="navbar-brand" href="#">
-                    <img  src="paisagem.png" style="width: 50px;" />
-                </a>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Arduino</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Bootstrap</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">React native</a>
-                </li>
-            </ul>
+            <a class="navbar-brand" href="">
+                <img src="img/img.jpg" width="50%" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuCursos">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="menuCursos">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Arduino</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Bootstrap</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">C++</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">JavaScript</a>
+                    </li>
+                </ul>
+            </div>
         </div>
+
     </nav>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
