cfb-bootstrap5 - menu sandwich em bootstrap #p1

--- a/cfb-bootstrap5/aula27/index.html
+++ b/cfb-bootstrap5/aula27/index.html
@@ -13,7 +13,7 @@
             <a class="navbar-brand" href="">
                 <img src="img/img.jpg" width="50%" alt="">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuCursos">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuCursos" style="cursor: pointer;" aria-expanded="true">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="navbar-collapse collapse" id="menuCursos">
