--- a/cfb-bootstrap5/aula28/index.html
+++ b/cfb-bootstrap5/aula28/index.html
@@ -13,6 +13,12 @@
             <a class="navbar-brand" href="">
                 <img src="img/img.jpg" width="50%" alt="">
             </a>
+
+            <form class="d-flex">
+                <input class="form-control m-2" type="text" />
+                <button class="btn btn-primary m-2">Pesquisar</button>
+            </form>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuCursos" style="cursor: pointer;" aria-expanded="true">
                 <span class="navbar-toggler-icon"></span>
             </button>
