--- a/cfb-bootstrap5/aula29/index.html
+++ b/cfb-bootstrap5/aula29/index.html
@@ -8,7 +8,33 @@
 </head>
 <body>
 
-    
+    <div id="banner">
+        <div id="indicadores">
+            <button type="button"></button>
+            <button type="button"></button>
+            <button type="button"></button>
+            <button type="button"></button>
+            <button type="button"></button>
+        </div>
+
+        <div id="imagens">
+            <div>
+                <img src="paisagem1.jpg" />
+            </div>
+            <div>
+                <img src="paisagem2.jpg" />
+            </div>
+            <div>
+                <img src="paisagem3.jpg" />
+            </div>
+            <div>
+                <img src="paisagem4.jpg" />
+            </div>
+            <div>
+                <img src="paisagem5.jpg" />
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
