cfb-bootstrap5 - carousel em bootstrap - banner rotativo #p1

--- a/cfb-bootstrap5/aula29/index.html
+++ b/cfb-bootstrap5/aula29/index.html
@@ -33,6 +33,9 @@
             <div>
                 <img src="paisagem5.jpg" />
             </div>
+            <div>
+                <img src="paisagem6.jpg" />
+            </div>
         </div>
     </div>
 
