--- a/cfb-bootstrap5/aula29/index.html
+++ b/cfb-bootstrap5/aula29/index.html
@@ -34,6 +34,15 @@
                 <img src="paisagem5.jpg" />
             </div>
         </div>
+
+        <div id="controles">
+            <button>
+                <span></span>
+            </button>
+            <button>
+                <span></span>
+            </button>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
