cfb-bootstrap5 - carousel em bootstrap - banner rotativo #p1

--- a/cfb-bootstrap5/aula29/index.html
+++ b/cfb-bootstrap5/aula29/index.html
@@ -36,10 +36,10 @@
         </div>
 
         <div id="controles">
-            <button>
+            <button type="button">
                 <span></span>
             </button>
-            <button>
+            <button type="button">
                 <span></span>
             </button>
         </div>
