cfb-bootstrap5 - adicionado texto ao carousel em bootstrap #p2

--- a/cfb-bootstrap5/aula30/index.html
+++ b/cfb-bootstrap5/aula30/index.html
@@ -21,9 +21,25 @@
         <div id="imagens" class="carousel-inner">
             <div class="carousel-item active">
                 <img src="paisagem1.jpg" class="d-block w-100" />
+                <div class="carousel-caption">
+                    <h2>
+                        Paisagem 1 muito bonita
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, unde aliquid nemo reiciendis saepe incidunt voluptatum enim voluptates, provident suscipit necessitatibus eius facere non quod iure! Et voluptas non tempore.
+                    </p>
+                </div>
             </div>
             <div class="carousel-item">
                 <img src="paisagem2.jpg" class="d-block w-100" />
+                <div class="carousel-caption">
+                    <h2>
+                        Paisagem 2 muito bonita
+                    </h2>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. In architecto nesciunt nisi id ab ut quae tenetur saepe deleniti? Deserunt ut vero dolor delectus assumenda, nihil alias quo recusandae excepturi!
+                    </p>
+                </div>
             </div>
             <div class="carousel-item">
                 <img src="paisagem3.jpg" class="d-block w-100" />
