cfb-bootstrap5 - offcanvas em bootstrap - janela lateral #p1

--- a/cfb-bootstrap5/aula32/index.html
+++ b/cfb-bootstrap5/aula32/index.html
@@ -15,10 +15,10 @@
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
         </div>
         <div class="offcanvas-body">
-            <a href="#" target="_blank">curso de bootstrap</a>
-            <a href="#" target="_blank">curso de arduino</a>
-            <a href="#" target="_blank">curso de javascript</a>
-            <a href="#" tabindex="_blank">curso de #c</a>
+            <a href="#" target="_blank">curso de bootstrap</a><br/>
+            <a href="#" target="_blank">curso de arduino</a><br/>
+            <a href="#" target="_blank">curso de javascript</a><br/>
+            <a href="#" tabindex="_blank">curso de #c</a><br/>
         </div>
     </div>
 
@@ -29,7 +29,6 @@
             abrir janela
         </button>
     </div>
-
     
 </body>
 </html>
